--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
         hbm2ddl:
           auto: update
   mvc:
-    hiddenmethod:
+    hidden-method:
       filter:
         enabled: true
 server:
